--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,16 +1,15 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'com.google.dagger.hilt.android'
 }
 
 android {
-    namespace 'net.hicare.hicaretest'
-    compileSdk 34
+    namespace 'com.ejlim.data'
+    compileSdk 33
 
     defaultConfig {
-        minSdk 30
-        targetSdk 34
+        minSdk 24
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -30,25 +29,17 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        viewBinding true
-    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
-    implementation project(path: ':data')
-    implementation project(path: ':domain')
+    implementation 'com.google.android.material:material:1.11.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation "com.google.dagger:hilt-android:2.44"
-    implementation "com.google.dagger:hilt-compiler:2.44"
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 }
