--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    //hilt
+    implementation "com.google.dagger:hilt-android:2.44"
+    implementation "com.google.dagger:hilt-compiler:2.44"
 }
