--- a/data/build.gradle
+++ b/data/build.gradle
@@ -57,6 +57,21 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    //coroutine Testing
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+
+    //mock server
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
+
+    //junit4 testing
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+
+    //core Testing
+    androidTestImplementation 'androidx.test:core:1.5.0'
+    
+
     //hilt
     implementation "com.google.dagger:hilt-android:2.44"
     implementation "com.google.dagger:hilt-compiler:2.44"
