--- a/data/build.gradle
+++ b/data/build.gradle
@@ -72,8 +72,13 @@ dependencies {
     //core Testing
     androidTestImplementation 'androidx.test:core:1.5.0'
     
-
     //hilt
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
+
+    //room
+    def room_version = "2.5.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
